replaced deprecated tags in logback-spring.xml
little changes in css and code